# nexus-social

./: .dockerignore  .env.example  .flake8  .pre-commit-config.yaml  Makefile  conftest.py  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  flake8.yml  migration_conflict_check.yml  tests.yml
api/: deprecation.py  schema.py  versioning.py
api/v1/: urls.py
api/v2/: urls.py
api/v2/auth/: serializers.py  urls.py  views.py
api/v2/organizations/: serializers.py  urls.py  views.py
apps/ai_engine/: admin.py  apps.py  models.py  urls.py
apps/analytics/: admin.py  models.py  urls.py
apps/audit/: admin.py  middleware.py  mixins.py  models.py  tasks.py  urls.py
apps/audit/migrations/: 0001_initial.py
apps/auth_core/: __init__.py  admin.py  apps.py  authentication.py  channel_auth.py  models.py  permissions.py  serializers.py  services.py  signals.py  throttling.py  urls.py  views.py
apps/auth_core/migrations/: 0001_initial.py  0002_test.py  0002_user_renames_and_tokens.py
apps/auth_core/v1/: serializers.py  urls.py  views.py
apps/auth_core/v2/: serializers.py  urls.py  views.py
apps/automation/: admin.py  models.py  urls.py
apps/content/: admin.py  apps.py  models.py  urls.py
apps/inbox/: __init__.py  admin.py  apps.py  consumers.py  models.py  urls.py
apps/notifications/: admin.py  consumers.py  dispatcher.py  models.py  schemas.py  urls.py
apps/organizations/: admin.py  apps.py  middleware.py  models.py  permissions.py  schemas.py  serializers.py  services.py  signals.py  urls.py  views.py
apps/organizations/management/commands/: create_public_tenant.py
apps/organizations/migrations/: 0001_initial.py  0002_tenants.py  0003_organization_invitation.py  0004_joinrequest.py  0005_alter_joinrequest_options_and_more.py  0006_alter_organizationinvitation_role_and_more.py
apps/organizations/v1/: serializers.py  urls.py  views.py
apps/organizations/v2/: serializers.py  urls.py  views.py
apps/posts/: admin.py  apps.py  models.py  schemas.py  serializers.py  urls.py  views.py
apps/posts/migrations/: 0001_initial.py  0002_rename_post_targets_platform_status_idx_pt_platform_status_idx.py
apps/publisher/: __init__.py  admin.py  apps.py  base.py  models.py  schemas.py  serializers.py  tasks.py  urls.py  views.py
apps/publisher/migrations/: 0001_initial.py
apps/scheduler/: __init__.py  admin.py  models.py  tasks.py  urls.py
apps/scheduler/migrations/: 0001_initial.py
apps/social_accounts/: __init__.py  admin.py  apps.py  models.py  urls.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: ARCHITECTURE.md
docs/api/: index.html
docs/api/ai_engine/: index.html
docs/api/analytics/: index.html
docs/api/audit/: index.html
docs/api/auth_core/: v1.html  v2.html
docs/api/automation/: index.html
docs/api/content/: index.html
docs/api/inbox/: index.html
docs/api/notifications/: index.html
docs/api/organizations/: v1.html  v2.html
docs/api/publisher/: index.html
docs/api/scheduler/: index.html
docs/api/social_accounts/: index.html
socialos/: __init__.py  api_urls.py  asgi.py  celery.py  routing.py  urls.py  wsgi.py
socialos/settings/: __init__.py  base.py  development.py  production.py  staging.py
tests/: factories.py  test_auth_core.py  test_health.py  test_mock_publisher.py  test_organizations.py  test_publish_task.py  test_publisher_base.py  test_tenant_isolation.py  test_timezone_utils.py
utils/: crypto.py  exceptions.py  health.py  pagination.py  timezone.py
